# Copyright (c) Facebook, Inc. and its affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

add_executable(Fig_9 EXCLUDE_FROM_ALL Fig_9.cpp)
target_link_libraries(Fig_9 PRIVATE faiss)

